--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,4 +40,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: 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
